Flickering issue fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -51,7 +51,8 @@ body {
 	font-size: 16px;
 	color: #000;
 	font-family: "proxima-nova";
-
+	-webkit-transform: translate3d(0, 0, 0);
+	-webkit-backface-visibility: hidden;
 	header {
 		padding: 30px 0;
 		background-color: $main_color;
@@ -625,7 +626,7 @@ body {
 											width: 20px;
 											height: 5px;
 											float: left;
-
+											-webkit-backface-visibility: hidden;
 											.break{
 											  right: 0;
 											  position: absolute;
@@ -633,6 +634,7 @@ body {
 											  width: 6px;
 											  height: 6px; 
 											  top: -1px;
+											  -webkit-backface-visibility: hidden;
 											}
 
 											.dot1{
